[package]
name = "llwlib"
version = "0.1.2"
edition = "2021"
description = "A costless windows api wrapper to create windows"
repository = "https://github.com/barnabasd/llwlib"
license = "MIT"
license-file = "LICENSE"

[dependencies.windows-sys]
version = "0.59.0"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_GdiPlus",
    "Win32_Graphics_Gdi"
]
